--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </center>
       </div>
       <div class="copy_right_footer">
-        Developed by - Zeynep M.
+        Developed by - Shreya Agarwal.
       </div>
 <script src="main.js"></script>
   </body>
